objects/Publishing_House__c.object
<CustomObject>
    <fields>
        <fullName>Headquarters_Country__c</fullName>
        <label>Headquarters Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cabo Verde</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Published_Date__c</fullName>
        <description>Field to store the Calculated value of the publishing date of the last released book of each Publishing House record</description>
        <label>Last Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publishing_House_Title__c</fullName>
        <description>Captures the name of the Publishing House</description>
        <label>Publishing House Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Captures the Year of Establishment for the Publishing House</description>
        <label>Year Of Establishment</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Publishing House</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publishing_House_Title__c</columns>
        <columns>Year__c</columns>
        <columns>Last_Published_Date__c</columns>
        <columns>Headquarters_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PHN-{000000}</displayFormat>
        <label>Publishing House Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publishing Houses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>